# app/Models/Commande.php
@@ -8,4 +8,15 @@ use Illuminate\Database\Eloquent\Model;
 class Commande extends Model
 {
     use HasFactory;
+    protected $fillable = [
+        'numero',
+        'model',
+        'description',
+        'mesure',
+        'delais',
+        'total',
+        'reste',
+        'user_id',
+        'client_id',
+    ];
 }
